--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -96,10 +96,11 @@
 
 
 
-.footer {
+footer {
+    background-color: #000;
+    height: 300px;
+    width: 300px;
+    color: #fff;
     text-align: center;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
-    height: 24px;
-}
+    padding: 30px;
+  }
